<resources>
    <string name="app_name">SOMAPASS</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">USERNAME</string>

    <!---<string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
    <string name="title_home">HOME</string>
    <string name="title_scan">SCAN</string>
    <string name="title_profile">PROFILE</string>

    <!---login-->
    <string name="username_login">USERNAME</string>
    <string name="password_login">PASSWORD</string>
    <string name="remember_me_login">REMEMBER ME</string>
    <string name="log_in_button_login">LOG IN</string>
    <string name="create_account_button_login">CREATE ACCOUNT</string>

    <!---menu-->
    <string name="hi_menu">HI</string>
    <string name="temperature_taking_menu">Temperature Taking</string>
    <string name="health_declaration_menu">Health Declaration</string>
    <string name="temperature_and_health_declaration_menu">TEMPERATURE AND HEALTH DECLARATION</string>
    <string name="check_out_button_menu">CHECK OUT</string>
    <string name="date_time_of_last_check_in_menu">Date Time of last Check in</string>
    <string name="last_check_in_place_menu">LAST CHECK IN PLACE</string>
    <string name="current_checked_in_locations_menu">CURRENT CHECKED IN LOCATIONS</string>
    <string name="location_menu">location</string>

    <!---temperature taking-->
    <string name="declare">DECLARE</string>
    <string name="temptaking">Temperature Taking</string>
    <string name="tempoption1">Less Than Or Equal To 37.6&#176;C</string>
    <string name="tempoption2">More Than Or Equal To 37.7&#176;C But I Am Feeling Well</string>
    <string name="tempoption3">More Than Or Equal To 37.7&#176;C And I Am Not Feeling Well</string>

    <!---health declaration-->
    <string name="healthdec">Health Declaration</string>
    <string name="selectno">Select &#34;No&#34; For All</string>
    <string name="healthqn1">Have you travelled to other countries besides Singapore in the past 14 days?</string>
    <string name="healthqn2">Have you received a quarantine/isolation order/stay-home notice in the past 14 days?</string>
    <string name="healthqn3">Within the past 14 days, have you been in close contact with someone who is a confirmed case for COVID-19 or has been been placed on quarantine or isolation order, and/or served stay-home notice?</string>
    <string name="healthqn4">Have you been issued a medical certificate (MC) for respiratory symptoms and the validity date of the MC has not yet expired?</string>
    <string name="healthqn5">Are you unwell with one or more of the following symptoms?</string>
    <string name="qn5option1">Fever</string>
    <string name="qn5option2">Dry Cough</string>
    <string name="qn5option3">Shortness of Breath</string>
    <string name="qn5option4">Sore Throat</string>
    <string name="qn5option5">Runny Nose</string>

    <string name="submit">Submit</string>
    <string name="view_temp_history">View History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!---profile-->
    <string name="view_history_profile">VIEW HISTORY</string>
    <string name="sign_out_profile">SIGN OUT</string>
    <string name="notification_profile">NOTIFICATION:</string>
    <string name="change_password_profile">CHANGE PASSWORD</string>
    <string name="email_profile">EMAIL</string>
    <string name="switch_on_profile">ON</string>
    <string name="switch_off_profile">OFF</string>

    <!---create account-->
    <string name="username_create_account">USERNAME</string>
    <string name="create_account_button_create_account">CREATE ACCOUNT</string>
    <string name="confirm_password_create_account">CONFIRM PASSWORD</string>
    <string name="password_create_account">PASSWORD</string>
    <string name="email_create_account">EMAIL</string>
    <string name="student_id_create_account">STUDENT ID</string>

    <!---safe entry-->
    <string name="you_are_visiting_checkIn">YOU ARE VISITING</string>
    <string name="check_in_button_checkIn">CHECK IN</string>
    <string name="safeentry_checkIn">SAFEENTRY</string>

    <!---check in success-->
    <string name="back_to_home_button_checkIn_success">BACK TO HOME</string>
    <string name="safeentry_checkIn_success">SAFEENTRY</string>
    <string name="check_in_button_checkOut">Check Out</string>
    <string name="you_are_exiting_checkOut">You are leaving</string>
    <string name="name_create_account">STUDENT NAME</string>
    <string name="past_3_temperature_declarations_history">Past 3 Temperature Declarations</string>



</resources>