<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthDec">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_profile"
        android:background="@color/background_darkblue"/>

    <LinearLayout
        android:id="@+id/linearLayout_health_title"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/profile_topbar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069">

        <ImageButton
            android:id="@+id/imageView_back_fromhealth"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/backarrow_darkblue" />

        <TextView
            android:id="@+id/textView_health_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/healthdec"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tempmcqcontainer"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_layout_menu"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_health_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthdec"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/background_darkblue"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectno"
            android:text="@string/selectno"
            android:fontFamily="@font/heavitas"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/healthqn1"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes1"
                android:text="@string/yes"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no1"
                android:text="@string/no"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/healthqn2"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes2"
                android:text="@string/yes"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no2"
                android:text="@string/no"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/healthqn3"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes3"
                android:text="@string/yes"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no3"
                android:text="@string/no"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/healthqn4"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes4"
                android:text="@string/yes"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no4"
                android:text="@string/no"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/healthqn5"
            android:fontFamily="@font/heavitas"
            android:textColor="@color/background_darkblue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fever"
                android:text="@string/qn5option1"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drycough"
                android:text="@string/qn5option2"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shortbreath"
                android:text="@string/qn5option3"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sorethroat"
                android:text="@string/qn5option4"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runnynose"
                android:text="@string/qn5option5"
                android:fontFamily="@font/heavitas"
                android:paddingBottom="5dp"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:fontFamily="@font/heavitas"
        android:background="@drawable/cardview_layout_menu"
        android:paddingHorizontal="90dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tempmcqcontainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        style="@style/BottomNavigationViewTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/background_darkblue"
        app:itemTextColor="@color/background_darkblue"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>