<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/menu_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_hi_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heavitas"
            android:text="@string/hi_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_title_hi_xxxx"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:paddingRight="10sp"
            android:paddingEnd="10sp" />

        <TextView
            android:id="@+id/textview_username_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:fontFamily="@font/heavitas"
            android:paddingLeft="10dp"
            android:text="XXXX"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/menu_title_hi_xxxx" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_searchbar_menu_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RelativeLayout
            android:id="@+id/relativeLayout_searchbar_menu_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/search_layout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_search_icon"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:src="@drawable/search_icon" />

            <TextView
                android:id="@+id/textView_search_menu"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:clickable="true"
                android:fontFamily="@font/heavitas"
                android:padding="10dp"
                android:text="@string/location_menu"
                android:textColor="@color/black_overlay"
                android:textSize="18dp" />

            <SearchView
                android:id="@+id/locationSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:visibility="invisible">

            </SearchView>

            <ImageView
                android:id="@+id/imageView_qrcode_icon"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:src="@drawable/qrcode_icon" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout_current_checkin_window"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cardview_layout_menu"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView_current_checkin_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heavitas"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:text="@string/current_checked_in_locations_menu"
                android:textColor="@color/background_darkblue"
                android:textSize="@dimen/menu_subtitle_checkIn_healthDec" />

            <ImageView
                android:id="@+id/darkBlue_line_checkIn_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:src="@drawable/darkblue_line" />

            <TextView
                android:id="@+id/textView_current_latest_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/heavitas"
                android:gravity="left"
                android:paddingStart="18dp"
                android:paddingLeft="18dp"
                android:text="@string/last_check_in_place_menu"
                android:textColor="@color/background_darkblue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_current_latest_checkintime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/heavitas"
                android:gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:text="@string/date_time_of_last_check_in_menu"
                android:textColor="@color/background_darkblue"
                android:textSize="13sp" />

            <Button
                android:id="@+id/checkout_home"
                android:layout_width="122dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_darkblue"
                android:fontFamily="@font/heavitas"
                android:padding="10dp"
                android:text="@string/check_out_button_menu"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <!--            <ListView-->
            <!--                android:id="@+id/listView_current_checkin_locations"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_temperature_declaration_window"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cardview_layout_menu"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView_temperature_declaration_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heavitas"
                android:gravity="center_horizontal"
                android:text="@string/temperature_and_health_declaration_menu"
                android:textColor="@color/background_darkblue"
                android:textSize="@dimen/menu_subtitle_checkIn_healthDec" />

            <ImageView
                android:id="@+id/darkBlue_line_healthDec_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:src="@drawable/darkblue_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <LinearLayout
                    android:id="@+id/linearLayout_temperature_taking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/healthdec_imagebutton"
                        android:layout_width="@dimen/menu_temperatureTaking_healthDec_icon_width"
                        android:layout_height="@dimen/menu_temperatureTaking_healthDec_icon_height"
                        android:layout_toEndOf="@+id/linearLayout_temperature_taking"
                        android:layout_toRightOf="@+id/linearLayout_temperature_taking"
                        android:background="@color/light_blue"
                        android:scaleType="fitCenter"
                        android:src="@drawable/declaration_icon" />

                    <TextView
                        android:id="@+id/textView_temperatur_menu"
                        android:layout_width="90dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/heavitas"
                        android:gravity="center"
                        android:text="@string/health_declaration_menu"
                        android:textColor="@color/background_darkblue"
                        android:textSize="10sp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout_declaration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/linearLayout_temperature_taking"
                    android:layout_toRightOf="@+id/linearLayout_temperature_taking"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/temp_imagebutton"
                        android:layout_width="@dimen/menu_temperatureTaking_healthDec_icon_width"
                        android:layout_height="@dimen/menu_temperatureTaking_healthDec_icon_height"
                        android:background="@color/light_blue"
                        android:scaleType="fitCenter"
                        android:src="@drawable/temperature_icon" />

                    <TextView
                        android:id="@+id/textView_declaration_menu"
                        android:layout_width="90dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/heavitas"
                        android:gravity="center"
                        android:text="@string/temperature_taking_menu"
                        android:textColor="@color/background_darkblue"
                        android:textSize="10sp" />


                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        style="@style/BottomNavigationViewTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/background_darkblue"
        app:itemTextColor="@color/background_darkblue"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>